tests/ui/higher-ranked/trait-bounds/normalize-under-binder/norm-before-method-resolution-opaque-type.next.stderr
error[E0282]: type annotations needed for `<X as Trait<'static>>::Out<_>`
  --> $DIR/norm-before-method-resolution-opaque-type.rs:25:9
   |
LL |     let x = *x;
   |         ^
   |
help: consider giving `x` an explicit type, where the placeholders `_` are specified
   |
LL |     let x: <_ as Trait<'static>>::Out<_> = *x;
   |          +++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
